# py-quine-mccluskey-solver

./: .pre-commit-config.yaml  mypy.ini  pyproject.toml
py_quine_mccluskey_solver/: __init__.py
